--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dddatingapp",
+  "name": "ddatingapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,7 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
+    "@react-native-firebase/storage": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -22,7 +24,10 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^7.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-responsive-dimensions": "^3.1.1",
