--- a/ios/DatingChat.xcodeproj/xcshareddata/xcschemes/DatingChat.xcscheme
+++ b/ios/DatingChat.xcodeproj/xcshareddata/xcschemes/DatingChat.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "DdatingApp.app"
-               BlueprintName = "DdatingApp"
-               ReferencedContainer = "container:DdatingApp.xcodeproj">
+               BuildableName = "DatingChat.app"
+               BlueprintName = "DatingChat"
+               ReferencedContainer = "container:DatingChat.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "DdatingAppTests.xctest"
-               BlueprintName = "DdatingAppTests"
-               ReferencedContainer = "container:DdatingApp.xcodeproj">
+               BuildableName = "DatingChatTests.xctest"
+               BlueprintName = "DatingChatTests"
+               ReferencedContainer = "container:DatingChat.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DdatingApp.app"
-            BlueprintName = "DdatingApp"
-            ReferencedContainer = "container:DdatingApp.xcodeproj">
+            BuildableName = "DatingChat.app"
+            BlueprintName = "DatingChat"
+            ReferencedContainer = "container:DatingChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DdatingApp.app"
-            BlueprintName = "DdatingApp"
-            ReferencedContainer = "container:DdatingApp.xcodeproj">
+            BuildableName = "DatingChat.app"
+            BlueprintName = "DatingChat"
+            ReferencedContainer = "container:DatingChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
